--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ pipdeptree==2.25.0
 pytesseract==0.3.13
 semchunk==2.2.2
 tesseract==0.1.3
+# Use pytesseract instead of tesserocr for cross-platform compatibility
