Improve Tesseract installation and configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ pipdeptree==2.25.0
 pytesseract==0.3.13
 semchunk==2.2.2
 tesseract==0.1.3
+tesserocr>=2.5.0; platform_system != "Windows"  # Only install on non-Windows systems
+Pillow>=9.0.0  # Required for image processing
+numpy>=1.21.0  # Required for image processing
 # Use pytesseract instead of tesserocr for cross-platform compatibility
