--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,5 @@ tesserocr>=2.5.0; platform_system != "Windows"  # Only install on non-Windows sy
 opencv-python-headless>=4.5.0  # Headless version for server environments
 pdf2image>=1.16.0  # For PDF processing
 dill==0.3.8  # Downgraded to be compatible with datasets
+# Gemini API client
+google-genai>=0.1.0
