--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,73 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Tesseract
+tessdata/
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS specific
+.DS_Store
+Thumbs.db
 
 # Virtual environment
 .venv/
 venv/
 ENV/
 
-# Python caches
-__pycache__/
-*.py[cod]
-*$py.class
-
 # Distribution / packaging
-dist/
-build/
 *.egg-info/
 
 # Local Gradio files
 .gradio/
 
 # IDE specific files
-.idea/
-.vscode/
 *.swp
 *.swo
-
-# OS-specific
-.DS_Store
-Thumbs.db
 
 # Backup folder
 /backup
@@ -36,6 +76,7 @@ Thumbs.db
 README_HF.md
 requirement.txt
 .env_example
+test_gemini_parser.py
 
 # Ignore documents folder
 /documents/
