--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 docling==2.25.0
-gradio==3.36.1
+gradio==5.14.0
 grpcio-status==1.70.0
 markdown==3.7
 marker-pdf==1.3.5
@@ -21,9 +21,5 @@ dill==0.3.8  # Downgraded to be compatible with datasets
 google-genai>=0.1.0
 # Environment variables
 python-dotenv>=1.0.0
-# Fix for compatibility issues
-pydantic<2.0.0
-fastapi<0.100.0
-starlette<0.28.0
-# Let pip resolve dependencies automatically without constraints
-# This allows the package manager to find compatible versions
+# Pin pydantic to resolve compatibility issues with gradio
+pydantic==2.7.1
